tests/reference/asr-dictionary1-a105a36.stderr
semantic error: Variable 'x' not declared
  --> tests/dictionary1.py:12:9
   |
12 |     z = x[1]
   |         ^ 
